@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p5",
+  "version": "v8r8p6",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p24",
+      [ "Dirac", "v6r17p23",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r14",
