@@ -1,3 +1,9 @@
+[v8r8p6]
+use DIRAC v6r17p23
+
+* change qt in Qt and remove gcc
+* Update heptools_x86_64-slc6-gcc48-opt.json
+
 [v8r8p5]
 use DIRAC v6r17p24
 
